popup bug fix 22/04/2025

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
           </div>
         </div> -->
           <!-- Section Timeline-->
-          <section id="wsm"  class="section section-grid section-content overflow pb-medium stories_bg pb-2"
+          <section id="wsm"  class="section section-grid section-content overflow pb-medium stories_bg pb-2 "
           data-arts-os-animation="data-arts-os-animation" data-grid-columns="3" data-grid-tablet="2"
           data-grid-mobile="1"  style="margin-top: -1px;">
           <div class="container-fluid">
@@ -523,7 +523,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Childhood Memories</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(0)" class="trigger button button_bordered button_black mb-0 view-button" id="myBtn"
+                      <a onclick="showPopup(event, 0)" class="trigger button button_bordered button_black mb-0 view-button" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -532,7 +532,7 @@
                     <div class="card-body">
                       <h6 class="card-title">School and College Days</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(1)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,1)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -541,7 +541,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Early Adulthood</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,2)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -550,7 +550,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Building My Family</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(3)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,3)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -559,7 +559,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Building a Career, Purpose, or Contribution</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(4)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,4)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -568,7 +568,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Triumphs & Challenges</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(5)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,5)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -577,7 +577,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Golden Years</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(6)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,6)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -586,7 +586,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Wisdom and Reflections</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(7)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,7)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -595,7 +595,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Legacy & Hopes for the Future</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(8)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,8)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -605,7 +605,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Childhood Memories</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(0)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,9)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -614,7 +614,7 @@
                     <div class="card-body">
                       <h6 class="card-title">School and College Days</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(1)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,10)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -623,7 +623,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Early Adulthood</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(2)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,11)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -632,7 +632,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Building My Family</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(3)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,12)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -641,7 +641,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Building a Career, Purpose, or Contribution</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(4)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,13)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -650,7 +650,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Triumphs & Challenges</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(5)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,14)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -659,7 +659,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Golden Years</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(6)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,15)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -668,7 +668,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Wisdom and Reflections</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(7)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,16)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -677,7 +677,7 @@
                     <div class="card-body">
                       <h6 class="card-title">Legacy & Hopes for the Future</h6>
                       <!-- <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> -->
-                      <a onclick="showPopup(8)" class="trigger button button_bordered button_black mb-0" id="myBtn"
+                      <a onclick="showPopup(event,17)" class="trigger button button_bordered button_black mb-0" id="myBtn"
                         data-hover="View" href="#"><span class="button__label-hover">View</span></a>
                     </div>
                   </div>
@@ -1802,7 +1802,7 @@
   <!-- Modal -->
 
   <div id="stories_popup" class="popup modal-content animate__animated animate__fadeIn">
-      <span class="close close-button closeModal" onclick="closePopup()">&times;</span>
+      <span class="close close-button closeModal" style="position: inherit !important;" onclick="closePopup()">&times;</span>
       <div class="model-wrapper overflow-model">
         <div class="left-content overflow-model1">
           <h3 id="popup-title"></h3>
