--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <!-- fullscreen menu -->
         <div class="header__wrapper-menu mt-0">
           <ul class="menu-overlay js-menu-overlay">
-            <li class="menu-item-has-children"><a class="h2" href="#wsm"
+            <li class="menu-item-has-children"><a class="h2" onclick="scrollToSection('wsm')"
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Why Stories Matter
                 </div>
@@ -268,7 +268,7 @@
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="#reviews"
+            <li class="menu-item-has-children"><a class="h2" onclick="scrollToSection('reviews')" 
                 data-pjax-link="overlayMenu">
                 <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Customer Reviews
                 </div>
@@ -280,7 +280,7 @@
                 </div>
               </a>
             </li>
-            <li class="menu-item-has-children"><a class="h2" href="#contact_us"
+            <li class="menu-item-has-children"><a class="h2" onclick="scrollToSection('contact_us')"
               data-pjax-link="overlayMenu">
               <div class="menu-overlay__item-wrapper split-text js-split-text" data-split-text-type="lines">Contact Us
               </div>
@@ -1060,6 +1060,58 @@
         <div class="container">
           <div class="accordion">
             <div class="accordion-item">
+              <button onclick="toggleAccordianFun('accordion-button-0')" id="accordion-button-0" aria-expanded="false"><span class="accordion-title">What is "Once Upon a
+                  Time"?</span><span class="icon" aria-hidden="true"></span></button>
+              <div class="accordion-content">
+                <p>Once Upon a Time" is a service that helps families capture and preserve their cherished memories by
+                  transforming them into beautifully crafted legacy storybooks. We guide you through the process of
+                  gathering stories, and then weave them into a timeless keepsake which is a hard-bound book. An
+                  audiobook in the writer's voice is also available at an additional cost (Coming soon)</p>
+              </div>
+            </div>
+          </div>
+          <div class="accordion">
+            <div class="accordion-item">
+              <button onclick="toggleAccordianFun('accordion-button-1')" id="accordion-button-1" aria-expanded="false"><span class="accordion-title">How does the guided storytelling process work?</span><span class="icon" aria-hidden="true"></span></button>
+              <div class="accordion-content">
+                <p>We provide thoughtful, scheduled prompts designed to spark memories and encourage storytelling. You can customize the frequency of these prompts—weekly, bi-weekly, monthly, or all at once—to suit your loved one's pace and preferences. Our platform makes it easy to manage and edit these prompts.</p>
+              </div>
+            </div>
+          </div>
+          <div class="accordion">
+            <div class="accordion-item">
+              <button onclick="toggleAccordianFun('accordion-button-2')" id="accordion-button-2" aria-expanded="false">
+                <span class="accordion-title">What do the books look like? Can I customize the cover?</span>
+                <span class="icon" aria-hidden="true"></span>
+              </button>
+              <div class="accordion-content">
+                <p>Our books are beautifully crafted with premium materials. You can customize the cover with your own photos and text.</p>
+              </div>
+            </div>
+          </div>
+          <div class="accordion">
+            <div class="accordion-item">
+              <button onclick="toggleAccordianFun('accordion-button-3')" id="accordion-button-3" aria-expanded="false">
+                <span class="accordion-title">When does my subscription end? What happens next?</span>
+                <span class="icon" aria-hidden="true"></span>
+              </button>
+              <div class="accordion-content">
+                <p>Your subscription end date is displayed in your account settings. You'll receive a reminder before your subscription ends.</p>
+              </div>
+            </div>
+          </div>
+          <div class="accordion">
+            <div class="accordion-item">
+              <button onclick="toggleAccordianFun('accordion-button-4')" id="accordion-button-4" aria-expanded="false">
+                <span class="accordion-title">How does AI based story generation work</span>
+                <span class="icon" aria-hidden="true"></span>
+              </button>
+              <div class="accordion-content">
+                <p>AI based story generation work</p>
+              </div>
+            </div>
+          </div>
+            <!-- <div class="accordion-item">
               <button onclick="toggleAccordianFun('accordion-button-1')" id="accordion-button-1" aria-expanded="false"><span class="accordion-title">What is "Once Upon a
                   Time"?</span><span class="icon" aria-hidden="true"></span></button>
               <div class="accordion-content" #accordion-button-1>
@@ -1068,8 +1120,8 @@
                   gathering stories, and then weave them into a timeless keepsake which is a hard-bound book. An
                   audiobook in the writer's voice is also available at an additional cost (Coming soon)</p>
               </div>
-            </div>
-            <div class="accordion-item">
+            </div> -->
+            <!-- <div class="accordion-item">
               <button onclick="toggleAccordianFun('accordion-button-2')" id="accordion-button-2" aria-expanded="false"><span class="accordion-title">Who is "Once Upon a
                   Time" for?</span><span class="icon" aria-hidden="true"></span></button>
               <div class="accordion-content">
@@ -1192,8 +1244,7 @@
               <div class="accordion-content">
                 <p>Only you and those you explicitly grant permission to will have access to your stories.</p>
               </div>
-            </div>
-          </div>
+            </div> -->
         </div>
         <div class="container mt-2">
           <div class="row">
@@ -1802,7 +1853,7 @@
   <!-- Modal -->
 
   <div id="stories_popup" class="popup modal-content animate__animated animate__fadeIn">
-      <span class="close close-button closeModal" style="position: inherit !important;" onclick="closePopup()">&times;</span>
+      <span class="close close-button closeModal"  onclick="closePopup()">&times;</span>
       <div class="model-wrapper overflow-model">
         <div class="left-content overflow-model1">
           <h3 id="popup-title"></h3>
