Cochin-font Changed every where

--- a/faq.html
+++ b/faq.html
@@ -302,10 +302,10 @@
                 <div class="w-100"></div>
                 <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                   data-split-text-set="words">
-                  <h2 class="h2 mt-0 mb-0">Frequently Asked Questions <br> (FAQs)</h2>
+                  <h2 class="h2 mt-0 mb-0 text-primary cochin-font">Frequently Asked Questions <br> (FAQs)</h2>
                 </div>
                 <div class="w-100"></div>
-                <div class="section__headline mt-2 mx-auto"></div>
+                <div class="section__headline mt-2 mx-auto bg-primary"></div>
               </div>
             </header>
           </div>
@@ -322,7 +322,7 @@
                   <div class="w-100"></div>
                   <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                     data-split-text-set="words">
-                    <h3 class="h3 mt-0 mb-0 text-center">Getting Started & General Information</h3>
+                    <h3 class="h3 mt-0 mb-0 text-center text-primary cochin-font">Getting Started & General Information</h3>
                   </div>
                   <div class="w-100"></div>
                   <div class="section__headline mt-2 mx-auto"></div>
@@ -471,7 +471,7 @@
                   <div class="w-100"></div>
                   <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                     data-split-text-set="words">
-                    <h3 class="h3 mt-0 mb-0 text-center">Storytelling & Content Creation</h3>
+                    <h3 class="h3 mt-0 mb-0 text-center text-primary cochin-font">Storytelling & Content Creation</h3>
                   </div>
                   <div class="w-100"></div>
                   <div class="section__headline mt-2 mx-auto"></div>
@@ -582,7 +582,7 @@
                   <div class="w-100"></div>
                   <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                     data-split-text-set="words">
-                    <h3 class="h3 mt-0 mb-0 text-center">Book Design & Customization</h3>
+                    <h3 class="h3 mt-0 mb-0 text-center text-primary cochin-font">Book Design & Customization</h3>
                   </div>
                   <div class="w-100"></div>
                   <div class="section__headline mt-2 mx-auto"></div>
@@ -648,7 +648,7 @@
                   <div class="w-100"></div>
                   <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                     data-split-text-set="words">
-                    <h3 class="h3 mt-0 mb-0 text-center">Account & Subscription Management</h3>
+                    <h3 class="h3 mt-0 mb-0 text-center text-primary cochin-font">Account & Subscription Management</h3>
                   </div>
                   <div class="w-100"></div>
                   <div class="section__headline mt-2 mx-auto"></div>
@@ -714,7 +714,7 @@
                   <div class="w-100"></div>
                   <div class="section-masthead__heading split-text js-split-text" data-split-text-type="lines,words"
                     data-split-text-set="words">
-                    <h3 class="h3 mt-0 mb-0 text-center">AI Based Story Generation</h3>
+                    <h3 class="h3 mt-0 mb-0 text-center text-primary cochin-font">AI Based Story Generation</h3>
                   </div>
                   <div class="w-100"></div>
                   <div class="section__headline mt-2 mx-auto"></div>
