--- a/how_it_works.html
+++ b/how_it_works.html
@@ -359,7 +359,8 @@
                 <div class="section__headline mb-1 mb-md-2 mx-auto"></div>
                 <div class="w-100"></div>
                 <div class="section-content__heading split-text js-split-text" data-split-text-type="lines,words" data-split-text-set="words">
-                  <h2>How It Works</h2>
+                  <h2 class=" text-primary cochin-font">How It Works</h2>
+                  <div class="section__headline mt-2 mx-auto bg-primary"></div>
                 </div>
               </div>
             </section>
