--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
                   </div>
                 </div>
                 <div class="figure-project__content  pt-1 pl-0">
-                  <h4 class="h4 figure-project__heading text-primary">The Little Footprints</h4>
+                  <h4 class="h4 figure-project__heading text-primary cochin-font">The Little Footprints</h4>
                   <div class="figure-project__category mt-md-1 mt-0-5">
                     <div
                       class="change-text-hover small-caps js-change-text-hover change-text-hover_has-line text-left">
@@ -952,7 +952,7 @@
                   </div>
                 </div>
                 <div class="figure-project__content  pt-1 pl-0">
-                  <h4 class="h4 figure-project__heading text-primary">Celebrations</h4>
+                  <h4 class="h4 figure-project__heading text-primary cochin-font">Celebrations</h4>
                   <div class="figure-project__category mt-md-1 mt-0-5">
                     <div
                       class="change-text-hover small-caps js-change-text-hover change-text-hover_has-line text-left">
