Update aboutus.html - removed quotation mark at the beginning of About Us

--- a/aboutus.html
+++ b/aboutus.html
@@ -337,7 +337,7 @@
                     <h2 class="widgettitle">About us</h2>
                     <!-- - header -->
                     <!-- content -->
-                    <p class="quick_intro">"Imagine a world where everyone’s story is treasured, we are making that a reality with Once Upon a Time - a revolutionary service that transforms cherished memories into beautiful legacy storybooks. <br><br> <b>We’re not just printing books: we’re weaving magic.</b></p>
+                    <p class="quick_intro">Imagine a world where everyone’s story is treasured, we are making that a reality with Once Upon a Time - a revolutionary service that transforms cherished memories into beautiful legacy storybooks. <br><br> <b>We’re not just printing books: we’re weaving magic.</b></p>
                     <!-- - content -->
                   </section>
                  
