Update how_it_works.html - Edited footer information
changed mail to link and display text
changed phone number
Changed "want to work with me" to "want to work with us"

--- a/how_it_works.html
+++ b/how_it_works.html
@@ -293,8 +293,8 @@
               <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">
                 Contacts</div>
               <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
-                <p><a href="mailto: info@onceuponatime">info@onceuponatime</a><br />+1 859-795-9217<br />+1
-                  716-913-6279<br />
+                <p><a href="mailto: hello@onceuponatimestories.com">hello@onceuponatimestories.com</a><br />+65 90072045<br />+65
+                  90071929<br />
                 </p>
               </div>
             </div>
@@ -311,7 +311,7 @@
             <!-- widget TEXT -->
             <div class="col-lg-4 header__widget">
               <div class="header__widget-title small-caps js-split-text split-text" data-split-text-type="lines">Want to
-                Work with Me?</div>
+                Work with Us?</div>
               <div class="header__widget-content js-split-text split-text" data-split-text-type="lines">
                 <p><a href="index.html#contact_us">Get in Touch</a><br />
                 </p>
