--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
                         <div class="js-split-text split-text" data-split-text-type="lines"
                           data-split-text-set="lines">
                           <p class="product_desc text-primary">The Life Book: Capture the heart and soul of a life lived. 'The Life Book' transforms cherished memories into a beautifully bound testament to a loved one's journey. Ideal for gifting to grandparents, parents, or crafting your own personal memoir, it's a timeless keepsake that celebrates the unique tapestry of a life</p>
-                          <div class="product_price"> <span>Starting Price</span> <span>₹ 11,000</span></div>
+                          <div class="product_price"> <span>Starting From</span> <span>₹ 11,000</span></div>
                          
                           <a class="button button_bordered button_accent mb-0-5" data-hover="Buy Now"
                             href="product-details.html"><span class="button__label-hover">Buy Now</span></a>
@@ -856,7 +856,7 @@
                         <div class="js-split-text split-text " data-split-text-type="lines"
                           data-split-text-set="lines">
                           <p class="product_desc text-primary">Document the milestones, triumphs, and lessons of a professional journey. 'Career Chronicles' preserves the legacy of a career, from hard-earned stripes to the transition into retirement. This is the perfect retirement gift, honoring years of dedication and experience with a beautifully crafted narrative.</p>
-                          <div class="product_price"> <span>Starting Price</span> <span>₹ 11,000</span></div>
+                          <div class="product_price"> <span>Starting From</span> <span>₹ 11,000</span></div>
                           <a class="button button_bordered button_accent mb-0-5" data-hover="Buy Now"
                             href="product-details.html"><span class="button__label-hover">Buy Now</span></a>
                         </div>
@@ -890,7 +890,7 @@
                         <div class=" js-split-text split-text" data-split-text-type="lines"
                           data-split-text-set="lines">
                           <p class="product_desc text-primary">Celebrate the unique story of a partnership. 'You and Me' captures the essence of a couple's journey, from the first spark of connection to the shared adventures of building a life together. Ideal for wedding anniversaries or any milestone in a relationship, it's a heartfelt tribute to love and companionship</p>
-                          <div class="product_price"> <span>Starting Price</span> <span>₹ 11,000</span></div>
+                          <div class="product_price"> <span>Starting From</span> <span>₹ 11,000</span></div>
                           <a class="button button_bordered button_accent mb-0-5" data-hover="Buy Nowe"
                             href="product-details.html"><span class="button__label-hover">Buy Now</span></a>
                         </div>
@@ -926,7 +926,7 @@
                         data-split-text-set="lines">
                         <p class="product_desc text-primary">Embrace the whirlwind of early parenthood. 'The Baby Book' captures the fleeting moments of a child's first years—the funny quirks, the adorable milestones, and the unfiltered joys and challenges of new parenthood. It's more than just a record; it's a celebration of the messy, beautiful reality of raising a little one.
                         </p>
-                        <div class="product_price"> <span>Starting Price</span> <span>₹ 21,000</span></div>
+                        <div class="product_price"> <span>Starting From</span> <span>₹ 11,000</span></div>
                         <a class="button button_bordered button_accent mb-0-5" data-hover="Buy Now"
                           href="product-details.html"><span class="button__label-hover">Buy Now</span></a>
                       </div>
@@ -960,7 +960,7 @@
                       <div class=" js-split-text split-text" data-split-text-type="lines"
                         data-split-text-set="lines">
                         <p class="product_desc text-primary">Unite voices and memories into a collective tribute. 'Celebrations' simplifies the process of gathering stories and photos from friends and family, creating a beautiful keepsake for any special occasion. Perfect for birthdays, anniversaries, or group events, it's a way to honor a person or moment with a chorus of shared memories.</p>
-                        <div class="product_price"> <span>Starting Price</span> <span>₹ 51,000</span></div>
+                        <div class="product_price"> <span>Starting From</span> <span>₹ 11,000</span></div>
                         <a class="button button_bordered button_accent mb-0-5" data-hover="Buy Nowe"
                           href="product-details.html"><span class="button__label-hover">Buy Now</span></a>
                       </div>
